# Encrypted-P2P-Chat

./: .env.example  .gitignore  FILE_TREE.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_message_crud_attachments.py  003_message_client_ids.py
backend/app/: main.py
backend/app/api/: auth.py  health.py  keys.py  messages.py  rooms.py  users.py  websocket.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  passkey_manager.py  rate_limit.py  websocket_manager.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attachment.py  base.py  credential.py  identity_key.py  membership.py  message.py  one_time_prekey.py  room.py  signed_prekey.py  user.py
backend/app/repositories/: key_repository.py  message_repository.py  room_repository.py  user_repository.py
backend/app/schemas/: auth.py  keys.py  message.py  room.py  user.py  websocket.py
backend/app/services/: auth_service.py  key_service.py  message_service.py  presence_service.py  room_service.py
backend/app/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_keys.py  test_messages.py  test_passkey_manager.py  test_rooms.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx-spa.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
nginx/: nginx.conf
(+47 files in other folders)
