[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encrypted-p2p-chat-backend"
version = "1.0.0"
description = "FastAPI backend for the encrypted P2P chat application."
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
